CA4/k8s/prometheus/prometheus-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: conveyor-pipeline
  labels:
    app: prometheus
    component: monitoring
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - name: web
      port: 9090
      targetPort: 9090
      protocol: TCP
  sessionAffinity: None
